tests/ui/long_sequence.stderr
error: winnow 1.0 supports at most 11 elements in a sequence; split with parenthesized sub-groups
 --> tests/ui/long_sequence.rs:5:9
  |
5 |         #A ~ #B ~ #C ~ #D ~ #E ~ #F ~ #G ~ #H ~ #I ~ #J ~ #K ~ #L
  |         ^
